# ratchet-dispatcher

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md  release-please-config.json
.github/workflows/: build.yaml  release-please.yaml  release.yaml
resources/: ci_pinned.yml
src/: git.rs  github.rs  io.rs  lib.rs  main.rs  ratchet.rs
tests/: git_tests.rs  overwrite_test.rs  preserve_newline_test.rs  real_world_issues_test.rs
tests/fixtures/: expected-workflow.yml  indentation-preservation-expected.yml  indentation-preservation-original.yml  indentation-test-expected.yml  indentation-test-original.yml  problematic-workflow.yml
tests/fixtures/.github/workflows/: test-workflow-ratcheted.yml  test-workflow.yml
