[package]
name = "ratchet-dispatcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive", "env"] }
clap-verbosity-flag = "2.2.0"
dotenv = { version = "0.15.0", features = ["clap"] }
log = "0.4.21"
env_logger = "0.11.3"
git2 = "0.18.3"
octocrab = "0.38.0"
tokio = { version = "1.37.0", features = ["full"] }
