[package]
name = "ratchet-dispatcher"
version = "1.2.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "ratchet-dispatcher"
path = "src/main.rs"

[lib]
name = "ratchet_dispatcher"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.5.47", features = ["derive", "env"] }
clap-verbosity-flag = "3.0.4"
dotenv = { version = "0.15.0", features = ["clap"] }
log = "0.4.28"
env_logger = "0.11.8"

octocrab = "0.44.1"
tokio = { version = "1.47.1", features = ["full"] }
anyhow = "1.0.99"


[dev-dependencies]
tempfile = "3.22.0"
assert_cmd = "2.0.17"
mockall = "0.13.1"

[profile.release]
opt-level = 'z'     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*
